[project]
name = "api-workinghub-ru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "black>=25.1.0",
    "litestar[full,standard]>=2.16.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
]
